# XChat1

./: .clang-format  .gitignore  AI_DISCLOSURE.md  CMakeLists.txt  CONTRIBUTING.md  DEV_LOG_2026-05-15.md  GlobalConstants.h  HANDOFF_2026-05-15_DIALOG_SPLIT.md  README.md  Version.h.in  main.cpp  res.qrc
.github/workflows/: manual-win-linux-release.yml  qt6-cmake-win-linux.yml
installer/: ZcChat2.iss  ZcChat2.iss.in
res/default_config/ZcChat2/: config.ini
res/default_config/ZcChat2/Character/Assets/test/: config.json
res/default_config/ZcChat2/Character/UserConfig/test/: config.json
res/default_config/ZcChat2/Plugin/Anime/: Basic Animation Package.json
utils/: AnimePlugin.cpp  AnimePlugin.h  AnimePluginManager.cpp  AnimePluginManager.h  CustomScrollBinder.cpp  CustomScrollBinder.h  DragHelper.cpp  DragHelper.h
windows/dialog/: dialog.cpp  dialog.h  dialog.ui
windows/dialog/history/: history.cpp  history.h  history.ui  historychild.cpp  historychild.h  historychild.ui
windows/setting/: setting.cpp  setting.h
windows/setting/child/: settingchild_about.cpp  settingchild_about.h  settingchild_about.ui  settingchild_char.cpp  settingchild_char.h  settingchild_char.ui  settingchild_llm.cpp  settingchild_llm.h  settingchild_llm.ui  settingchild_plugin.cpp  settingchild_plugin.h  settingchild_plugin.ui  settingchild_text.cpp  settingchild_text.h  settingchild_vits.cpp  settingchild_vits.h  settingchild_vits.ui
windows/tachie/: tachie.cpp  tachie.h  tachie.ui
